--- a/customize.html
+++ b/customize.html
@@ -21,6 +21,14 @@
             </p>
         </header>
 
+        <section class="info-panel card-panel fade-in">
+            <h2>Custom Experience Highlights</h2>
+            <p>Choose from alumni events, bonding trips, creative keepsakes, and high-energy socials. Mandatory items
+                anchor our legacy, while optional picks help you tailor the vibe and budget.</p>
+            <p class="text-muted small">Add the extras you need, skip the rest, and see your total update in real time.
+            </p>
+        </section>
+
         <section id="selection-section" class="card-panel fade-in">
             <form id="item-form" class="modern-form">
                 <div class="input-pair">
@@ -33,7 +41,7 @@
                 </div>
                 <div class="section-heading">
                     <h2>Custom Components</h2>
-                    <p class="hint">Toggle the elements you want included. Mandatory pieces are already locked in.</p>
+                    <p class="hint">Select the elements you want included. Mandatory pieces are already locked in.</p>
                 </div>
                 <div id="custom-items" class="option-grid custom-items-grid"></div>
                 <div class="section-heading stack compact">
@@ -77,6 +85,19 @@
             <p class="summary-subhead">Lock in what you love, then sync with the financial secretary.</p>
             <ul id="selected-items" class="selection-list"></ul>
             <p id="total-cost" class="total-cost"></p>
+            <div class="payment-info">
+                <h3>Payment Details</h3>
+                <p><span>Account Name:</span> Zulaikha Hammed</p>
+                <p><span>Account Number:</span> 7036805391</p>
+                <p><span>Bank:</span> Moniepoint</p>
+            </div>
+            <div class="notice-block">
+                <p><span class="notice-bullet"></span>You can only save your selection once.</p>
+                <p><span class="notice-bullet"></span>You can also share your selection once.</p>
+                <p><span class="notice-bullet"></span>You are expected to add an extra ₦50 bank charge.</p>
+                <p><span class="notice-bullet"></span>After you click to share your details, ensure to share your bank-generated receipt with the Fin Sec also.</p>
+                <p><span class="notice-bullet"></span>Contact any member of the FYB Committee for special cases.</p>
+            </div>
             <div class="button-grid">
                 <button id="save-btn" class="fancy-btn pill">Save Details</button>
                 <button id="share-btn" class="fancy-btn outline">Share with Financial Secretary</button>
@@ -84,6 +105,27 @@
             </div>
             <div id="save-feedback" class="save-feedback"></div>
             <div id="share-feedback" class="save-feedback"></div>
+        </section>
+
+        <section class="note-grid fade-in">
+            <article class="info-card">
+                <h3>Trad Day Fabric</h3>
+                <p class="text-muted">Mandatory for everyone and billed separately during Trad Wear selection.</p>
+                <ul>
+                    <li>Male: Fabric + Fila = ₦15,000</li>
+                    <li>Female: Fabric + Gele = ₦10,000</li>
+                </ul>
+            </article>
+            <article class="info-card">
+                <h3>Important Notes</h3>
+                <ul>
+                    <li>Payments are non-refundable.</li>
+                    <li>Custom add-ons are only valid with an existing package.</li>
+                    <li>You may upgrade your package before the deadline by paying the difference.</li>
+                    <li>Installments are allowed but must be completed before the deadline.</li>
+                </ul>
+                <p class="text-muted small">Deadline: 25th of April, 2026.</p>
+            </article>
         </section>
     </main>
 
