--- a/index.html
+++ b/index.html
@@ -15,11 +15,187 @@
 
     <main class="page-shell">
         <header class="page-header fade-in">
-            <p class="eyebrow">FYB Celebration</p>
+            <p class="eyebrow">Compound '25 FYB Packages</p>
             <h1>Select Your Package</h1>
             <p class="lede">Choose a curated experience that fits your style. The smoother the selection, the sooner
                 your celebration details get locked in.</p>
         </header>
+
+        <section class="info-panel card-panel fade-in">
+            <p class="eyebrow accent">Dear Compounders,</p>
+            <p>We're so excited to unveil the Final Year Packages for Compound '25. Each curated option balances fun,
+                responsibility, and affordability so every class member can close this chapter beautifully.</p>
+            <p><strong>One Set. One Journey. One Legacy.</strong> Choose the experience that fits you.</p>
+        </section>
+
+        <section class="package-breakdown card-panel fade-in">
+            <h2>Package Breakdown</h2>
+            <p class="lede">Tap on any package to see what is included. Prices already cover everything listed.</p>
+            <div class="packages-accordion">
+                <details class="package-detail">
+                    <summary>
+                        <span>
+                            <strong>Vintage Package</strong>
+                            <small>₦29,000</small>
+                        </span>
+                        <span class="chevron" aria-hidden="true"></span>
+                    </summary>
+                    <ul class="package-list">
+                        <li>
+                            <p class="package-item-title">Sash</p>
+                            <p class="package-item-desc">Official OAU and Pharmacy sash for every Compounder.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Yearbook</p>
+                            <p class="package-item-desc">Memory-filled book capturing our images, details, stories, quotes, and highlights.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Cultural / Trad Night</p>
+                            <p class="package-item-desc">Food, fashion, music, and vibes at the cultural night.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Class Project</p>
+                            <p class="package-item-desc">Collective impact project that represents Compound ’25.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Health Outreach</p>
+                            <p class="package-item-desc">Community health service and awareness beyond the classroom. Our very own Coporate Social Responsibility.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Souvenirs</p>
+                            <p class="package-item-desc">Souvenirs and keepsakes for you.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Sign-out Party</p>
+                            <p class="package-item-desc">Sign-out party packed with vibes, pictures, and memories.</p>
+                        </li>
+                    </ul>
+                </details>
+
+                <details class="package-detail">
+                    <summary>
+                        <span>
+                            <strong>Prestige Package</strong>
+                            <small>₦60,000</small>
+                        </span>
+                        <span class="chevron" aria-hidden="true"></span>
+                    </summary>
+                    <ul class="package-list">
+                        <li>
+                            <p class="package-item-title">Sash</p>
+                            <p class="package-item-desc">Official OAU and Pharmacy sash for every Compounder.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Yearbook</p>
+                            <p class="package-item-desc">Memory-filled book capturing our images, details, stories, quotes, and highlights.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Cultural / Trad Night</p>
+                            <p class="package-item-desc">Food, fashion, music, and vibes at the cultural night.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Class Project</p>
+                            <p class="package-item-desc">Collective impact project that represents Compound ’25.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Health Outreach</p>
+                            <p class="package-item-desc">Community health service and awareness beyond the classroom. Our very own Coporate Social Responsibility.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Alumni Networking Brunch</p>
+                            <p class="package-item-desc">Connect with alumni from various practice settings(Industry & Supply Chain, Community, Hospital, Regulatory, Academic & Research) to gain insights, mentorship, and opportunities. It also doubles as a Brunch.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">FYB Branded Journal</p>
+                            <p class="package-item-desc">Personalized Compound '25 journal for you.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Movie Night</p>
+                            <p class="package-item-desc"></p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Sport Fiesta</p>
+                            <p class="package-item-desc">Friendly competition, fun games, and stress relief at the Main Bowl.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Souvenirs</p>
+                            <p class="package-item-desc">Souvenirs and keepsakes for you.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Class Dinner</p>
+                            <p class="package-item-desc">Final year dinner like no other. No need for too much talk. Come experience it first-hand.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Sign-out Party</p>
+                            <p class="package-item-desc">Sign-out party packed with vibes, pictures, and memories.</p>
+                        </li>
+                    </ul>
+                </details>
+
+                <details class="package-detail">
+                    <summary>
+                        <span>
+                            <strong>Imperial Package</strong>
+                            <small>₦89,000</small>
+                        </span>
+                        <span class="chevron" aria-hidden="true"></span>
+                    </summary>
+                    <ul class="package-list">
+                        <li>
+                            <p class="package-item-title">Sash</p>
+                            <p class="package-item-desc">Official OAU and Pharmacy sash for every Compounder.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Yearbook</p>
+                            <p class="package-item-desc">Memory-filled book capturing our images, details, stories, quotes, and highlights.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Cultural / Trad Night</p>
+                            <p class="package-item-desc">Food, fashion, music, and vibes at the cultural night.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Class Project</p>
+                            <p class="package-item-desc">Collective impact project that represents Compound ’25.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Health Outreach</p>
+                            <p class="package-item-desc">Community health service and awareness beyond the classroom. Our very own Coporate Social Responsibility.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Alumni Networking Brunch</p>
+                            <p class="package-item-desc">Connect with alumni from various practice settings(Industry & Supply Chain, Community, Hospital, Regulatory, Academic & Research) to gain insights, mentorship, and opportunities. It also doubles as a Brunch.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">FYB Branded Journal</p>
+                            <p class="package-item-desc">Personalized Compound '25 journal for you.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Movie Night</p>
+                            <p class="package-item-desc"></p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Sport Fiesta</p>
+                            <p class="package-item-desc">Friendly competition, fun games, and stress relief at the Main Bowl.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Class Dinner</p>
+                            <p class="package-item-desc">Final year dinner like no other. No need for too much talk. Come experience it first-hand.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Sign-out Party</p>
+                            <p class="package-item-desc">Sign-out party packed with vibes, pictures, and memories.</p>
+                        </li>
+                            <p class="package-item-title">Imperial Souvenirs</p>
+                            <p class="package-item-desc">Souvenir pack reserved for Imperial-inspired looks.</p>
+                        </li>
+                        <li>
+                            <p class="package-item-title">Class Trip &amp; Staycation</p>
+                            <p class="package-item-desc">Relax, bond, and create memories outside campus.</p>
+                        </li>
+                    </ul>
+                </details>
+            </div>
+        </section>
 
         <section id="selection-section" class="card-panel fade-in">
             <form id="item-form" class="modern-form">
@@ -112,6 +288,19 @@
             <p class="summary-subhead">Double-check details, save them for the team, then share immediately.</p>
             <ul id="selected-items" class="selection-list"></ul>
             <p id="total-cost" class="total-cost"></p>
+            <div class="payment-info">
+                <h3>Payment Details</h3>
+                <p><span>Account Name:</span> Zulaikha Hammed</p>
+                <p><span>Account Number:</span> 7036805391</p>
+                <p><span>Bank:</span> Moniepoint</p>
+            </div>
+            <div class="notice-block">
+                <p><span class="notice-bullet"></span>You can only save your selection once.</p>
+                <p><span class="notice-bullet"></span>You can also share your selection once.</p>
+                <p><span class="notice-bullet"></span>You are expected to add an extra ₦50 bank charge.</p>
+                <p><span class="notice-bullet"></span>After you click to share your details, ensure to share your bank-generated receipt with the Fin Sec also.</p>
+                <p><span class="notice-bullet"></span>Contact any member of the FYB Committee for special cases.</p>
+            </div>
             <div class="button-grid">
                 <button id="save-btn" class="fancy-btn pill">Save Details</button>
                 <button id="share-btn" class="fancy-btn outline">Share with Financial Secretary</button>
@@ -119,6 +308,29 @@
             </div>
             <div id="save-feedback" class="save-feedback"></div>
             <div id="share-feedback" class="save-feedback"></div>
+        </section>
+
+        <section class="note-grid fade-in">
+            <article class="info-card">
+                <h3>Trad Day Fabric</h3>
+                <p class="text-muted">Mandatory for everyone and billed separately during Trad Wear selection.</p>
+                <ul>
+                    <li>Male: Fabric + Fila = ₦15,000</li>
+                    <li>Female: Fabric + Gele = ₦10,000</li>
+                </ul>
+            </article>
+            <article class="info-card">
+                <h3>Important Notes</h3>
+                <ul>
+                    <li>Payments are non-refundable.</li>
+                    <li>You can’t get the trad fabric without purchasing a package.</li>
+                    <li>You can upgrade before the deadline by paying the difference.</li>
+                    <li>Installment payments are allowed but must be completed before the deadline.</li>
+                    <li>Contact any member of the FYB Committee for special cases.</li>
+                </ul>
+                <p class="text-muted small">Installments: Vintage (2), Prestige (3), Imperial (3).</p>
+                <p class="text-muted small">Deadline: 25th of April, 2026.</p>
+            </article>
         </section>
     </main>
 
